# donsvimpc-redone

./: .gitignore  README.md  collect_dset.py  main.py  plot_cbf_interactive.py  plot_heatmap.py  preview_environment.py  pyproject.toml  run_dubins.py  run_quadrotor.py  train.py
controllers/: mppi.py  pyproject.toml
dynamics/: dubins_dynamics.py  environment_dynamics.py  obstacle_dynamics.py  pyproject.toml
environment/: dubins_dynamics.py  dynamics.py  environment.py  environment_dynamics.py  mppi.py  obstacle_dynamics.py  pyproject.toml  quadrotor_dynamics.py
environments/: discovery.py  dubins.py  pyproject.toml
networks/: feature.py  ncbf.py
safety/: cbf.py  pyproject.toml
tasks/: dubins.py  pyproject.toml
