[project]
name = "donsvimpc-redone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.10.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
]

[tool.uv.sources]
environment = { workspace = true }
controllers = { workspace = true }

[tool.uv.workspace]
members = [
    "environment",
    "controllers",
    "tasks",
    "safety",
]

