[project]
name = "donsvimpc-redone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.10.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
]

[tool.uv.sources]
dynamics = { workspace = true }
controllers = { workspace = true }
tasks = { workspace = true }
safety = { workspace = true }

[tool.uv.workspace]
members = [
    "dynamics",
    "controllers",
    "tasks",
    "safety",
]

