[project]
name = "donsvimpc-redone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "equinox>=0.13.7",
    "jax>=0.10.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "optax>=0.2.8",
    "tqdm>=4.67.3",
]

[tool.uv.sources]
dynamics = { workspace = true }
controllers = { workspace = true }
tasks = { workspace = true }
safety = { workspace = true }

[tool.uv.workspace]
members = [
    "dynamics",
    "controllers",
    "tasks",
    "safety",
    "environments",
]

